[gd_scene load_steps=9 format=3 uid="uid://bvxotvnx4c7ky"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_ywc2o"]
[ext_resource type="Texture2D" uid="uid://b663ki6uklrug" path="res://Art/mailbox.png" id="2_d4bwk"]
[ext_resource type="Theme" uid="uid://b6ptv7lyfyyqi" path="res://text_theme.tres" id="3_1ujsj"]
[ext_resource type="AudioStream" uid="uid://cwl7jid5sapio" path="res://SFX/sfx_match.wav" id="4_hwf7f"]
[ext_resource type="AudioStream" uid="uid://dilq5ar6kl6r0" path="res://SFX/sfx_explosion.wav" id="5_kg3a7"]
[ext_resource type="AudioStream" uid="uid://clbxby2cmdju3" path="res://SFX/sfx_tick.wav" id="6_fo2yh"]
[ext_resource type="Texture2D" uid="uid://cugwcpr06evky" path="res://Art/bullet.png" id="7_nikcm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8qw7o"]
size = Vector2(100, 60)

[node name="Enemy" type="Area2D"]
position = Vector2(400, 50)
input_pickable = false
script = ExtResource("1_ywc2o")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_d4bwk")
hframes = 4

[node name="Label" type="Label" parent="Sprite"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -32.0
offset_right = -50.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 64)
theme = ExtResource("3_1ujsj")
theme_override_font_sizes/font_size = 40
text = "S"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="PreviewLabel" type="Label" parent="Sprite"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -32.0
offset_right = -50.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)
pivot_offset = Vector2(50, 0)
theme = ExtResource("3_1ujsj")
theme_override_colors/font_color = Color(0.392157, 0, 0.784314, 1)
theme_override_font_sizes/font_size = 40
text = "S"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8qw7o")

[node name="sfx_match" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_hwf7f")

[node name="sfx_destroy" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_kg3a7")

[node name="sfx_highlight" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_fo2yh")
volume_db = 2.0

[node name="GPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 12
one_shot = true
speed_scale = 2.0
explosiveness = 0.8
lifetime_randomness = 0.2
fixed_fps = 30
draw_order = 1
texture = ExtResource("7_nikcm")
direction = Vector2(4, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 60.0
angular_velocity_min = 45.0
angular_velocity_max = 90.0
scale_amount_min = 2.0
scale_amount_max = 2.0
color = Color(0.509804, 0, 1, 1)
hue_variation_max = 0.1
